# 5pct-radar

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  OPERATIONS.md  README.md  SPECIFICATIONS.md  STORY.md  pyproject.toml
docs/: STRATEGY_FINDINGS.md
scheduler/: com.mgprj.5pct_radar.daily.plist  com.mgprj.5pct_radar.holdings.plist  com.mgprj.5pct_radar.weekly.plist  install.sh  run_daily.sh  run_holdings.sh  run_weekly.sh
scripts/: irr_distribution.py  refresh_weekly.sh
src/five_pct_radar/: __init__.py  __main__.py  actor_stats.py  backtest_actor.py  backtest_phase0.py  catalyst_chain.py  classify.py  config.py  corp_code.py  daily.py  dart_client.py  deep_dive_lite.py  dive.py  extract_llm.py  fetch_filing.py  grounding.py  holdings.py  journal.py  lifecycle_monitor.py  movements.py  notify.py  position.py  rank.py  resolve_filer.py  scan.py  score_filing.py  score_model.py  sizing.py  today.py
src/five_pct_radar/analysis/: catalyst_chain.py  classify.py  extract_llm.py  grounding.py  resolve_filer.py  scan.py  score_filing.py
src/five_pct_radar/backtest/: actor_stats.py  backtest_actor.py  backtest_phase0.py  lifecycle_monitor.py
src/five_pct_radar/core/: corp_code.py  dart_client.py  fetch_filing.py
src/five_pct_radar/workflow/: calendar_.py  daily.py  dive.py  history.py  holdings.py  journal.py  movements.py  notify.py  opportunities.py  position.py  publish_mgprj.py  rank.py  retrospect.py  sizing.py  today.py
tests/: test_self_test.py
