[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "five-pct-radar"
version = "0.1.0"
description = "한국 거래소 5% 대량보유 신고 본문 → catalyst 자동 분석 (DART + Gemini structured output + Google search grounding)"
authors = [{ name = "5pct-radar contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["dart", "korea", "stock", "activism", "m-and-a", "filing-analysis", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.31",
    "google-genai>=1.0",
]

[project.optional-dependencies]
backtest = [
    "pykrx>=1.0",
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
five-pct-radar = "five_pct_radar.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
